fixed gap...

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -69,6 +69,10 @@
 
   .contacts__item {
     column-gap: 11px;
+
+    @media (max-width: 1921px) {
+      column-gap: 5px;
+    }
   }
 
   @media (max-width: 550px) {
